# microdoc

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  README.md.in  _version.py  doc2md.py  doctest_utils.py  inject_usage.py  md2html.py  py2doc.py  pyproject.toml  tests.py
.github/workflows/: build-n-release.yml  build-wheel.yml
microdoc/: __init__.py  _version.py  doc2md.py  doctest_utils.py  inject_usage.py  md2html.py  py2doc.py  utils.py
tools/: inject_usage.py  replace_vars.py
