[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "microdoc"
dynamic = ["version"]
description = "A minimalistic documentation generator"
authors = [
  { name = "Javier Escalada Gómez", email = "kerrigan29a@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent"
]

[tool.setuptools]
py-modules = ["doc2md", "doctest_utils", "inject_usage", "md2html", "py2doc", "_version"]

[tool.setuptools.dynamic]
version = {attr = "_version.__version__"}

[project.scripts]
py2doc = "py2doc:main"
doc2md = "doc2md:main"
md2html = "md2html:main"
