[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microdoc"
dynamic = ["version"]
description = "A minimalistic documentation generator"
authors = [
  { name = "Javier Escalada Gómez", email = "kerrigan29a@gmail.com" }
]
license = "BSD-3-Clause-Clear"
license-files = ["LICEN[CS]E.*"]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
]

[project.urls]
Repository = "https://github.com/Kerrigan29a/microdoc"

[tool.setuptools]
packages = ["microdoc"]

[tool.setuptools.dynamic]
version = {attr = "microdoc._version.__version__"}

[project.scripts]
py2doc = "microdoc.py2doc:main"
doc2md = "microdoc.doc2md:main"
md2html = "microdoc.md2html:main"
